# particleSimulation

./: .gitignore  .gitmodules  CMakeLists.txt  ParticleSimulation  README.md  default.nix  loadShader.cpp  makefile
.ccls-cache/@@data@code@c@particleSim/: @nix@store@6izgfmxv36gh59n00nkjzrjxqq5z9pdg-clang-14.0.6-lib@lib@clang@14.0.6@include@__stddef_max_align_t.h.blob  @nix@store@6izgfmxv36gh59n00nkjzrjxqq5z9pdg-clang-14.0.6-lib@lib@clang@14.0.6@include@stdarg.h.blob  @nix@store@6izgfmxv36gh59n00nkjzrjxqq5z9pdg-clang-14.0.6-lib@lib@clang@14.0.6@include@stddef.h.blob  @nix@store@6izgfmxv36gh59n00nkjzrjxqq5z9pdg-clang-14.0.6-lib@lib@clang@14.0.6@include@stdint.h.blob  @nix@store@b7hvml0m3qmqraz1022fwvyyg6fc1vdy-gcc-12.2.0@include@c++@12.2.0@math.h.blob  @nix@store@b7hvml0m3qmqraz1022fwvyyg6fc1vdy-gcc-12.2.0@include@c++@12.2.0@stdlib.h.blob  @nix@store@djnwijjrmqs79i1b3xqxl3kggz4mhazb-glfw-3.3.8@include@GLFW@glfw3.h.blob  @nix@store@dxl2j2qkjprhh8zxz5nhykm2l6lmy6yz-glu-9.0.2-dev@include@GL@glu.h.blob  @nix@store@hkj250rjsvxcbr31fr1v81cv88cdfp4l-glibc-2.37-8-dev@include@alloca.h.blob  @nix@store@hkj250rjsvxcbr31fr1v81cv88cdfp4l-glibc-2.37-8-dev@include@bits@atomic_wide_counter.h.blob  @nix@store@hkj250rjsvxcbr31fr1v81cv88cdfp4l-glibc-2.37-8-dev@include@bits@byteswap.h.blob  @nix@store@hkj250rjsvxcbr31fr1v81cv88cdfp4l-glibc-2.37-8-dev@include@bits@endian.h.blob  @nix@store@hkj250rjsvxcbr31fr1v81cv88cdfp4l-glibc-2.37-8-dev@include@bits@endianness.h.blob  @nix@store@hkj250rjsvxcbr31fr1v81cv88cdfp4l-glibc-2.37-8-dev@include@bits@floatn-common.h.blob  @nix@store@hkj250rjsvxcbr31fr1v81cv88cdfp4l-glibc-2.37-8-dev@include@bits@floatn.h.blob  @nix@store@hkj250rjsvxcbr31fr1v81cv88cdfp4l-glibc-2.37-8-dev@include@bits@flt-eval-method.h.blob  @nix@store@hkj250rjsvxcbr31fr1v81cv88cdfp4l-glibc-2.37-8-dev@include@bits@fp-fast.h.blob  @nix@store@hkj250rjsvxcbr31fr1v81cv88cdfp4l-glibc-2.37-8-dev@include@bits@fp-logb.h.blob  @nix@store@hkj250rjsvxcbr31fr1v81cv88cdfp4l-glibc-2.37-8-dev@include@bits@libc-header-start.h.blob  @nix@store@hkj250rjsvxcbr31fr1v81cv88cdfp4l-glibc-2.37-8-dev@include@bits@libm-simd-decl-stubs.h.blob  (+52 more)
shaders/: SimpleFragmentShader.fragmentshader  circle.frag  circle.vert  physics.comp  sumVel.comp
src/: draw.c  draw.h  glfwCallbacks.h  globalFunctions.c  globalStructs.c  globalStructs.h  loadShader.cpp  loadShader.hpp  main.c  physics.c  physics.h  shapes.c  shapes.h
src/glfw/: glfwCallbacks.c  (+3 more)
(+84 files in other folders)
